--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "rxjs": "6.5.5",
-    "tslib": "1.11.1",
+    "tslib": "^1.10.0",
     "core-js": "2.6.11",
-    "zone.js": "0.10.3",
+    "zone.js": "~0.10.2",
     "@ngrx/store": "9.1.0",
     "@ngrx/entity": "9.1.0",
     "jasmine-core": "3.4.0",
@@ -17,7 +17,7 @@
     "@angular/router": "9.1.1",
     "jasmine-marbles": "0.5.0",
     "@angular/compiler": "9.1.1",
-    "web-animations-js": "2.3.2",
+    "web-animations-js": "^2.3.2",
     "@ngrx/router-store": "9.1.0",
     "@angular/animations": "9.1.1",
     "@angular/platform-browser": "9.1.1",
@@ -32,14 +32,14 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
